--- a/libftl_parser/TODO
+++ b/libftl_parser/TODO
@@ -3,6 +3,8 @@
 Shouldn't infix calls be expressions as well?
 Normal calls are... 
 
+refactor func attr from identifier to external type
+
 Refactor match ... Err(err) => Err(err) to let smth = self.func()?;
 Refactor long parse matches to try_parse_* functions
 Allow function types in parse_type
