--- a/libftl_parser/TODO
+++ b/libftl_parser/TODO
@@ -5,6 +5,7 @@ Normal calls are...
 
 Refactor match ... Err(err) => Err(err) to let smth = self.func()?;
 Refactor long parse matches to try_parse_* functions
+Refactor function and infix parsing to smaller functions
 Allow function types in parse_type
 
 
